--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "mongoose": "^5.6.11",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-number-format": "^4.2.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "require-dir": "^1.2.0"
